update StickerGenerator